--- a/homepage2.html/homepage2.html
+++ b/homepage2.html/homepage2.html
@@ -92,17 +92,44 @@
             <img src="/About Us/KEMENDIKBUDRISTEK.png">
             <img src="/About Us/KEMKOMINFO.png">
             <img src="/About Us/Kementerian Ketenagakerjaan.png">
+            <img src="/About Us/PBESI.png">
             <img src="/About Us/BI 3.png">
             <img src="/About Us/BCA SHADOW.png">
             <img src="/About Us/BNI PUTIH.png">
             <img class="imbalance-logo" src="logo imbalance (1).png">
             <img src="/About Us/BOB-logo_vertical-white-on-color.png">
             <img src="/About Us/TOGO LOGO baru shadow.png">
+            <img src="/About Us/LOGO SERENA VETOR.png">
             <img src="DISCOVERY_LOGO_B-17-17__1_-removebg-preview.png">
-            <img src="">
-            <img src="">
-            <img src="">
+            <img src="/About Us/Logo Digifest White.png">
+            <img src="/About Us/KG.png">
+            <img src="Championship Blue.png">
+            <img src="/About Us/grab putih.png">
+            <img src="/About Us/GOX.png">
+            <img src="/About Us/SKYA_Primary Logo.png">
+            <img src="/About Us/Logo-VCG.png">
+            <img src="/About Us/Anantarupa Logo-Color.png">
+            <img src="/About Us/BLACK_HEX_000000.png">
+            <img src="/About Us/Main_Logo_of_National_Research_and_Innovation_Agency_of_Indonesia.svg.png">
+            <img src="/About Us/logo krevasi 01 transparentArtboard 1.png">
+            <img src="/About Us/Koding Next 2.png">
+            <img src="/About Us/LOGO BOBOBOX TRANSPARANT.png">
+            <img src="/About Us/w3gg`.png">
+            <img src="/About Us/Logo-VCG.png">
+            <img src="/About Us/RRI LOGO 2.png">
+            <img src="/About Us/AGI.png">
+            <img src="/About Us/ATTN.png">
+            <img src="/About Us/foresthree-logo-new white.png">
+            <img src="/About Us/plextone 2.png">
+            <img src="/About Us/rev.png">
+            <img src="/About Us/2.png">
             <img src="/About Us/Logo Wu Hub.png">
+            <img src="/About Us/loklok.png">
+            <img src="/About Us/FF v.1.png">
+            <img src="/About Us/MLbb (2).png">
+            <img src="/About Us/Logo Smashing Feathers.png">
+            <img src="/About Us/CS2 v.1.png">
+            <img src="/About Us/LogoWhite.png">
         </div>
     </section>
 
