--- a/homepage2.html/homepage2.html
+++ b/homepage2.html/homepage2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamecomm Indonesia</title>
+    <link rel="icon" href="GC INDO 2.png" type="image/x-icon">
     <link rel="stylesheet" href="homepage.css">
     <script src="https://kit.fontawesome.com/091372dc96.js"></script>
 </head>
@@ -18,7 +19,7 @@
                 <li><a href="">Article</a></li>
                 <li><a href="">Event</a></li>
                 <li><a href="http://127.0.0.1:5501/homepage/News%20Page/news.html">News</a></li>
-                <li><a href="http://127.0.0.1:5500/About%20Us/aboutus.html">About Us</a></li>
+                <li><a href="http://127.0.0.1:5500/AboutUs.html">About Us</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
