--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -32,7 +32,7 @@
       <div class="popup-content">
         <p>Login Dulu Yuk! Supaya bisa<br>akses semua fitur Website Gamecomm Indonesia!</p>
       </div>
-      <video class="video-zivana" src="mulut 3.mp4" alt="Gambar kanan" autoplay muted loop></video>
+      <video class="video-zivana" src="20 detik.mp4" alt="Gambar kanan" autoplay muted loop></video>
     </div>
   </div>
 
@@ -163,7 +163,7 @@
             <img src="/About Us/plextone 2.png">
             <img src="/About Us/Koding Next 2.png">
             <img src="/About Us/2.png">
-            <img src="NUON Melon Telkom.jpg">
+            <img src="4.png">
             <img src="/About Us/Logo Wu Hub.png">
             <img src="/About Us/loklok.png">
             <img src="/About Us/FF v.1.png">
