--- a/Article/article.html
+++ b/Article/article.html
@@ -37,18 +37,23 @@
         </div>
         <section class="other-articles">
             <article>
-                <img src="https://i.pinimg.com/736x/a7/02/e2/a702e26f74c1acd3063e9f575241bfca.jpg" alt="Article 1">
-                <h3>Lorem ipsum dolor sit amet</h3>
+                <img src="img/img1.png" alt="Article 1">
+                <h3>Peran DEI dalam Ekspansi Global: Bandai Namco Online Berbagi Perspektif di CEDEC 2024
+                </h3>
                 <p>Consectetur adipiscing elit.</p>
             </article>
             <article>
-                <img src="https://i.pinimg.com/736x/de/50/2b/de502ba6c6cf41a468e52b67995abb99.jpg" alt="Article 2">
-                <h3>Lorem ipsum dolor</h3>
+                <img src="img/img2.jpg" alt="Article 2">
+                <h3>Teaser Baru Agni: Village of Calamity
+                    Hadirkan Nuansa Horor Klasik yang Mencekam
+                    </h3>
                 <p>Adipiscing elit blablabla facilis leo.</p>
             </article>
             <article>
-                <img src="https://i.pinimg.com/736x/61/7b/57/617b57d0e31abae7a8fabf8882456182.jpg" alt="Article 3">
-                <h3>Lorem ipsum dolor</h3>
+                <img src="img/img3.png" alt="Article 3">
+                <h3>Atlus Merilis Video yang Menjelajahi Dunia dalam Game
+                    Metaphor: ReFantazio dalam Video Terbaru
+                    </h3>
                 <p>Consectetur adipiscing elit.</p>
             </article>
         </section>
