--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -136,7 +136,7 @@
             <img src="/About Us/BI 3.png">
             <img src="/About Us/BCA SHADOW.png">
             <img src="/About Us/BNI PUTIH.png">
-            <img class="imbalance-logo" src="logo imbalance (1).png">
+            <img class="imbalance-logo" src="logo imbalance.png">
             <img src="/About Us/BOB-logo_vertical-white-on-color.png">
             <img src="/About Us/TOGO LOGO baru shadow.png">
             <img src="/About Us/LOGO SERENA VETOR.png">
